Archive2/3f/7747e4127d772a/output
main.cpp: In function 'int main()':
main.cpp:21:37: error: 'strerror' was not declared in this scope
   cout << "shit: " << strerror(errno);
                                     ^
